# deferred_apply

./: .gitignore  Makefile  README.md
.github/workflows/: codeql.yml
inc/: deferred_apply.hpp  deferred_apply_old.hpp
test/: CMakeLists.txt  Makefile  common.cmake  deferred_apply_test.cpp  deferred_apply_test.hpp  deferred_apply_test11.cpp  deferred_apply_test_variable_length_func.cpp
test/build_by_cpp11/: CMakeLists.txt
test/build_by_cpp14/: CMakeLists.txt
test/build_by_cpp17/: CMakeLists.txt
test/src/: deferred_apply_test.cpp  deferred_apply_test11.cpp  deferred_apply_test_variable_length_func.cpp  test_deferred_apply.cpp  test_deferred_applying_arguments.cpp
